# circuitpython-build-tools

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  circuitpython_build_tools.py  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: build.yml  pre-commit.yml  release.yml
LICENSES/: Unlicense.txt
circuitpython_build_tools/: build.py  munge.py  target_versions.py
circuitpython_build_tools/scripts/: build_bundles.py  build_mpy_cross.py  circuitpython_mpy_cross.py  munge.py
scripts/: build_bundles.py  build_library.py  build_mpy_cross.py  circuitpython-build-bundles  circuitpython-build-library
testcases/: test1.exp  test1.py
tests/: test_munge.py
