[build-system]
requires = [
  "setuptools>=77",
  "wheel",
  "setuptools-scm",
]

[project]
name = "circuitpython-build-tools"
requires-python = ">=3.10"
description = "CircuitPython library build tools"
readme = "README.md"
authors = [
    {name = "Scott Shawcroft", email = "scott@adafruit.com"}
]
keywords = [
    "circuitpython",
]
license = "MIT"
classifiers = [
  # https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.scripts]
circuitpython-build-bundles = "circuitpython_build_tools.scripts.build_bundles:build_bundles"
circuitpython-mpy-cross = "circuitpython_build_tools.scripts.circuitpython_mpy_cross:main"

[project.urls]
Homepage = "https://www.adafruit.com/"
Source = "https://github.com/adafruit/circuitpython-build-tools"
Tracker = "https://github.com/adafruit/circuitpython-build-tools/issues"

[tool.setuptools]
zip-safe = false
packages = [
  "circuitpython_build_tools",
  "circuitpython_build_tools.scripts",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
# It would be nice to include the commit hash in the version, but that
# can't be done in a PEP 440-compatible way.
version_scheme = "no-guess-dev"
# Test PyPI does not support local versions.
local_scheme = "no-local-version"
fallback_version = "0.0.0"
